--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@next/third-parties": "15.1.0",
     "@sendgrid/mail": "^8.1.4",
     "@tailwindcss/forms": "^0.5.9",
+    "aos": "^2.3.4",
     "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
@@ -17,6 +18,8 @@
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
+    "react-multi-carousel": "^2.8.6",
+    "reactjs-nextjs-carousel": "^0.0.7",
     "recharts": "^2.15.0",
     "server-only": "^0.0.1"
   },
